// $Id$

CHANGELOG for Media module.
===========================

#692592 by aaron: Add media-add_from_url.js.
#692592 by aaron: Begin preview for from url form.
#692592 by aaron: Allow stream wrappers to validate & parse url's.
#692592 by aaron: Add hook_media_parse.
by aaron: Rename the Media module.
by aaron: Remove the media_emfield module.
by aaron: Add a wysiwyg flag to filter for youtube & the like.
by aaron: Add cache_media_xml table to schema.
by aaron: Add media_retrieve_xml().
by aaron: Allow for WYSIWYG attribute overrides.
by aaron: t('Format') in media_format_form().
by aaron: Change _parse_url in MediaReadOnlyStreamWrapper to explode on ://.
#671744 by aaron: Fix redirect after uploading new media from content admin.
#671744 by aaron: Fix error when uploading new media from media content admin.
#673998 by aaron: Fix typo (s/view/video).
#673998 by aaron: Move media type defs to hook_enable.
#678588 by aaron: Fix undefined index error on node view.
by aaron: Use the currently undocumented #attached property to load js & css.
by aaron: Defer to the Styles module to route formatting for the 'file'.
by aaron: Fix formatter build modes.
by aaron: Prefix formatters with 'media_'.
by aaron: Change default formatter to 'preview'.
by aaron: hook_field_formatter is now hook_field_formatter_view.
by aaron: Add blank settings/instance_settings to hook_field_info.
by aaron: Change hook_field_widget to hook_field_widget_form.
by JacobSingh: Begin work on new browser concept.
by aaron: Toggle 'match type' value on media type administrative form.
by aaron: Display administrative options only if we're handling the callback.
by aaron: Add administrative options for match type.
by aaron: Allow administrator to edit existing bundles.
by aaron: Filter media type bundles by stream.
by aaron: Fix various errors.
by aaron: Begin work on formatters.
by aaron: Add medium admin style.
by aaron: Add preview.
by aaron: Hyphens to underscores in #element.