@@ -3,6 +3,7 @@
 CHANGELOG for Media module.
 ===========================
 
+#692592 by aaron: Add AJAX preview for media from url.
 #692592 by aaron: Add media-add_from_url.js.
 #692592 by aaron: Begin preview for from url form.
 #692592 by aaron: Allow stream wrappers to validate & parse url's.
